# Lidar-SCU

./: CMakeLists.txt  README.md
Data/Samples/: Velo1.pcd  Velo2.pcd  Velo3.pcd  Velo4.pcd  Velo5.pcd
inc/: DataModel.h  MRFWrapper.h  Registration.h  rayTracer.hpp  sceneInterpreter.h
inc/MRF/: example.h
src/: DataModel.cpp  MRFWrapper.cpp  Registration.cpp  main.cpp  processMLS.cpp  rayTracer.cpp  sceneInterpreter.cpp
